tests/compile/dup_alias.stderr
error: Alias "my_fn" is already defined
 --> tests/compile/dup_alias.rs:5:34
  |
5 |     my_fn = concat(gork, _, bork),
  |                                  ^

error[E0425]: cannot find function `foo_baz` in this scope
  --> tests/compile/dup_alias.rs:14:16
   |
14 |     assert_eq!(foo_baz(), 42);
   |                ^^^^^^^ not found in this scope
